UI adjustments by Philipp's comments.

--- a/product-details-2.html
+++ b/product-details-2.html
@@ -278,7 +278,6 @@
             </h2>
             <div class="details-toggle-content">
               <div class="product-photos-container">
-              
                 <div class="photo-item">
                   <a href="assets/images/product-image-large.jpg" target="_blank">
                     <img src="./assets/images/product-image-large.jpg" alt="Nice Product">
@@ -309,7 +308,7 @@
           </div>
           <div class="details-block" id="reviews-info">
             <h2 class="specification-title">
-              <i class="fa fa-star"></i>
+              <i class="fa fa-star-o"></i>
               2 Reviews for <span>Nice Product</span>
             </h2>
             <div class="details-toggle-content">
@@ -563,37 +562,37 @@
                   </span>
               </div>
               <div class="sale-item">-33%</div>
-              <div class="item-info">
+              <a href="product-details.html" class="item-info">
                 <figure class="product-picture">
-                  <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  <span class="picture-link"><img src="assets/images/product-image.png" alt="Product"></span>
                 </figure>
-                <a href="#" class="category-name">
-                  <span class="expired">Expired</span>
-                  Home Products
-                </a>
+                <span class="category-name">
+                    <span class="expired">Expired</span>
+                    Home Products
+                  </span>
                 <h6 class="product-name">
                   <i class="fa fa-fire"></i>
-                  <a href="product-details.html" title="Just Product">
-                    Canon Camera
-                  </a>
+                  <span class="name-title" title="Just Product">
+                      Canon Camera
+                    </span>
                 </h6>
-                <div class="product-rate" title="Rated 4.7 out of 5">
-                  <span class="rate-star active">★</span>
-                  <span class="rate-star active">★</span>
-                  <span class="rate-star active">★</span>
-                  <span class="rate-star active">★</span>
-                  <span class="rate-star active">★</span>
-                </div>
-                <div class="best-deal">Best deal at: <strong>BestBuy</strong></div>
+                <span class="product-rate" title="Rated 4.7 out of 5">
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                  </span>
+                <span class="best-deal">Best deal at: <strong>BestBuy</strong></span>
                 <ul class="product-params">
                   <li><span>Camera:</span> 100500 megapixels</li>
                 </ul>
-              </div>
+              </a>
               <div class="product-additional-info">
-                <div class="product-price">
-                  <div class="previous-price">$2000.99</div>
-                  <div class="current-price">$1999.99</div>
-                </div>
+                <a href="product-details.html" class="product-price">
+                  <span class="previous-price">$2000.99</span>
+                  <span class="current-price">$1999.99</span>
+                </a>
                 <div class="more">
                   <a href="#">+ 4 more</a>
                 </div>
@@ -610,35 +609,35 @@
                     <i class="fa fa-bar-chart"></i>
                   </span>
               </div>
-              <div class="item-info">
+              <a href="product-details.html" class="item-info">
                 <figure class="product-picture">
-                  <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  <span class="picture-link"><img src="assets/images/product-image.png" alt="Product"></span>
                 </figure>
-                <a href="#" class="category-name">hiTech</a>
+                <span class="category-name">hiTech</span>
                 <h6 class="product-name">
                   <i class="fa fa-fire"></i>
-                  <a href="product-details.html" title="Just Product">
-                    Jet Pack
-                  </a>
+                  <span class="name-title" title="Just Product">
+                      Jet Pack
+                    </span>
                 </h6>
-                <div class="product-rate" title="Rated 5 out of 5">
-                  <span class="rate-star active">★</span>
-                  <span class="rate-star active">★</span>
-                  <span class="rate-star active">★</span>
-                  <span class="rate-star active">★</span>
-                  <span class="rate-star active">★</span>
-                </div>
-                <div class="best-deal">Best deal at: <strong>Metro</strong></div>
+                <span class="product-rate" title="Rated 5 out of 5">
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                  </span>
+                <span class="best-deal">Best deal at: <strong>Metro</strong></span>
                 <ul class="product-params">
                   <li><span>Speed:</span> 140 km/H</li>
                   <li><span>Weight:</span> 50 kg</li>
                   <li><span>Max distance:</span> 100 km</li>
                 </ul>
-              </div>
+              </a>
               <div class="product-additional-info">
-                <div class="product-price">
-                  <div class="current-price">$19999.99</div>
-                </div>
+                <a href="product-details.html" class="product-price">
+                  <span class="current-price">$19999.99</span>
+                </a>
                 <div class="more">
                   <a href="#">+ 1 more</a>
                 </div>
@@ -655,36 +654,36 @@
                     <i class="fa fa-bar-chart"></i>
                   </span>
               </div>
-              <div class="item-info">
+              <a href="product-details.html" class="item-info">
                 <figure class="product-picture">
-                  <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  <span class="picture-link"><img src="assets/images/product-image.png" alt="Product"></span>
                 </figure>
-                <a href="#" class="category-name">Different Products</a>
+                <span class="category-name">Different Products</span>
                 <h6 class="product-name">
                   <i class="fa fa-fire"></i>
-                  <a href="product-details.html" title="Just Product">
-                    Ibanez RG350 Guitar
-                  </a>
+                  <span class="name-title" title="Just Product">
+                      Ibanez RG350 Guitar
+                    </span>
                 </h6>
-                <div class="product-rate" title="Rated 4.2 out of 5">
-                  <span class="rate-star active">★</span>
-                  <span class="rate-star active">★</span>
-                  <span class="rate-star active">★</span>
-                  <span class="rate-star active">★</span>
-                  <span class="rate-star">★</span>
-                </div>
-                <div class="best-deal">Best deal at: <strong>MusicMaster</strong></div>
+                <span class="product-rate" title="Rated 4.2 out of 5">
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star">★</span>
+                  </span>
+                <span class="best-deal">Best deal at: <strong>MusicMaster</strong></span>
                 <ul class="product-params">
                   <li><span>Strings:</span> 6</li>
                   <li><span>Neck:</span> Bolt on</li>
                   <li><span>Wood:</span> Basswood</li>
                   <li><span>Picks:</span> Simor Dunkan</li>
                 </ul>
-              </div>
+              </a>
               <div class="product-additional-info">
-                <div class="product-price">
-                  <div class="current-price">$473.53</div>
-                </div>
+                <a href="product-details.html" class="product-price">
+                  <span class="current-price">$473.53</span>
+                </a>
                 <div class="more">
                   <a href="#">+ 3 more</a>
                 </div>
