--- a/product-details.html
+++ b/product-details.html
@@ -237,50 +237,42 @@
               </label>
             </h4>
             <div class="details-toggle-content">
-              <div class="store-offer">
-                <div class="store-logo">
-                  <a href="https://www.amazon.com" target="_blank">
-                    <img src="./assets/images/amazon-logo.png" alt="Amazon">
-                  </a>
-                </div>
-                <div class="store-name">
-                  <a href="https://www.amazon.com" target="_blank">Awesome Product on the Amazon.com</a>
-                </div>
-                <div class="store-status">
-                  <div class="store-price">$1,100.00</div>
-                  <div class="store-updated">May 3, 2020 5:56 pm <i class="fa fa-question-circle-o"></i></div>
-                  <div class="store-available-items">2 new from $1,100.00</div>
-                </div>
-                <a href="https://www.amazon.com" class="button-buy-now" target="_blank">Buy Now</a>
-              </div>
-              <div class="store-offer">
-                <div class="store-logo">
-                  <a href="https://www.aliexpress.com" target="_blank">
-                    <img src="./assets/images/aliexpress-logo.png" alt="AliExpress">
-                  </a>
-                </div>
-                <div class="store-name">
-                  <a href="https://www.aliexpress.com" target="_blank">Awesome Product name on the AliExpress.com with weird and long translation from chinese</a>
-                </div>
-                <div class="store-status">
-                  <div class="stock-out">Out of stock</div>
-                </div>
-                <a href="https://www.aliexpress.com" class="button-buy-now" target="_blank">Buy Now</a>
-              </div>
-              <div class="store-offer">
-                <div class="store-logo">
-                  <a href="https://www.ebay.com" target="_blank">
-                    <img src="./assets/images/ebay-logo.png" alt="ebay">
-                  </a>
-                </div>
-                <div class="store-name">
-                  <a href="https://www.ebay.com" target="_blank">Awesome Product name from the ebay.com</a>
-                </div>
-                <div class="store-status">
-                
-                </div>
-                <a href="https://www.ebay.com" class="button-buy-now" target="_blank">Buy Now</a>
-              </div>
+              <a href="https://www.amazon.com" target="_blank" class="store-offer">
+                <span class="store-logo">
+                  <img src="./assets/images/amazon-logo.png" alt="Amazon">
+                </span>
+                <span class="store-name">
+                  Awesome Product on the Amazon.com
+                </span>
+                <span class="store-status">
+                  <span class="store-price">$1,100.00</span>
+                  <span class="store-updated">May 3, 2020 5:56 pm <i class="fa fa-question-circle-o"></i></span>
+                  <span class="store-available-items">2 new from $1,100.00</span>
+                </span>
+                <span class="button-buy-now">Buy Now</span>
+              </a>
+              <a href="https://www.aliexpress.com" target="_blank" class="store-offer">
+                <span class="store-logo">
+                  <img src="./assets/images/aliexpress-logo.png" alt="AliExpress">
+                </span>
+                <span class="store-name">
+                  Awesome Product name on the AliExpress.com with weird and long translation from chinese
+                </span>
+                <span class="store-status">
+                  <span class="stock-out">Out of stock</span>
+                </span>
+                <span class="button-buy-now">Buy Now</span>
+              </a>
+              <a href="https://www.ebay.com" target="_blank" class="store-offer">
+                <span class="store-logo">
+                  <img src="./assets/images/ebay-logo.png" alt="ebay">
+                </span>
+                <span class="store-name">
+                  Awesome Product name from the ebay.com
+                </span>
+                <span class="store-status"></span>
+                <span class="button-buy-now">Buy Now</span>
+              </a>
             </div>
           </div>
           <div class="details-block" id="descriptions">
@@ -586,7 +578,7 @@
                     </figure>
                     <div class="related-product-info">
                       <a href="#" class="related-product-name">Cool product</a>
-                      <span class="related-product-price">$999.99</span>
+                      <a href="#" class="related-product-price">$999.99</a>
                       <a href="#" class="related-compare"><i class="fa fa-line-chart"></i> Add to Compare</a>
                     </div>
                   </div>
@@ -598,7 +590,7 @@
                     </figure>
                     <div class="related-product-info">
                       <a href="#" class="related-product-name">Nice product</a>
-                      <span class="related-product-price">$950.50</span>
+                      <a href="#" class="related-product-price">$950.50</a>
                       <a href="#" class="related-compare"><i class="fa fa-line-chart"></i> Add to Compare</a>
                     </div>
                   </div>
@@ -610,7 +602,7 @@
                     </figure>
                     <div class="related-product-info">
                       <a href="#" class="related-product-name">Great product</a>
-                      <span class="related-product-price">$1000.01</span>
+                      <a href="#" class="related-product-price">$1000.01</a>
                       <a href="#" class="related-compare"><i class="fa fa-line-chart"></i> Add to Compare</a>
                     </div>
                   </div>
@@ -622,7 +614,7 @@
                     </figure>
                     <div class="related-product-info">
                       <a href="#" class="related-product-name">Amazing product</a>
-                      <span class="related-product-price">$1111.10</span>
+                      <a href="#" class="related-product-price">$1111.10</a>
                       <a href="#" class="related-compare"><i class="fa fa-line-chart"></i> Add to Compare</a>
                     </div>
                   </div>
@@ -638,43 +630,43 @@
               Top Offers
             </h2>
             <div class="top-offers">
-              <div class="offer-item">
-                <figure><a href="#"><img src="./assets/images/top-offer-image.jpg" alt="Top Offer"></a></figure>
-                <div class="name-prices">
-                  <a href="#" class="top-offer-name">Cool Product</a>
-                  <div class="price">900.00</div>
-                </div>
-              </div>
-              <div class="offer-item">
-                <figure><a href="#"><img src="./assets/images/top-offer-image.jpg" alt="Top Offer"></a></figure>
-                <div class="name-prices">
-                  <a href="#" class="top-offer-name">Great Product with very long name to test layout</a>
-                  <div class="price">23,057.50</div>
-                </div>
-              </div>
-              <div class="offer-item">
-                <figure><a href="#"><img src="./assets/images/top-offer-image.jpg" alt="Top Offer"></a></figure>
-                <div class="name-prices">
-                  <a href="#" class="top-offer-name">Discount Product</a>
-                  <div class="first-price">777.70</div>
-                  <div class="price">700.00</div>
-                </div>
-              </div>
-              <div class="offer-item">
-                <figure><a href="#"><img src="./assets/images/top-offer-image.jpg" alt="Top Offer"></a></figure>
-                <div class="name-prices">
-                  <a href="#" class="top-offer-name">Super Product</a>
-                  <div class="price">1,000.00</div>
-                </div>
-              </div>
-              <div class="offer-item">
-                <figure><a href="#"><img src="./assets/images/top-offer-image.jpg" alt="Top Offer"></a></figure>
-                <div class="name-prices">
-                  <a href="#" class="top-offer-name">More discounts Product</a>
-                  <div class="first-price">933.50</div>
-                  <div class="price">850.00</div>
-                </div>
-              </div>
+              <a href="product-details-2.html" class="offer-item">
+                <figure><img src="./assets/images/top-offer-image.jpg" alt="Top Offer"></figure>
+                <span class="name-prices">
+                  <span class="top-offer-name">Cool Product</span>
+                  <span class="price">900.00</span>
+                </span>
+              </a>
+              <a href="product-details-2.html" class="offer-item">
+                <figure><img src="./assets/images/top-offer-image.jpg" alt="Top Offer"></figure>
+                <span class="name-prices">
+                  <span class="top-offer-name">Great Product with very long name to test layout</span>
+                  <span class="price">23,057.50</span>
+                </span>
+              </a>
+              <a href="product-details-2.html" class="offer-item">
+                <figure><img src="./assets/images/top-offer-image.jpg" alt="Top Offer"></figure>
+                <span class="name-prices">
+                  <span class="top-offer-name">Discount Product</span>
+                  <span class="first-price">777.70</span>
+                  <span class="price">700.00</span>
+                </span>
+              </a>
+              <a href="product-details-2.html" class="offer-item">
+                <figure><img src="./assets/images/top-offer-image.jpg" alt="Top Offer"></figure>
+                <span class="name-prices">
+                  <span class="top-offer-name">Super Product</span>
+                  <span class="price">1,000.00</span>
+                </span>
+              </a>
+              <a href="product-details-2.html" class="offer-item">
+                <figure><img src="./assets/images/top-offer-image.jpg" alt="Top Offer"></figure>
+                <span class="name-prices">
+                  <span class="top-offer-name">More discounts Product</span>
+                  <span class="first-price">933.50</span>
+                  <span class="price">850.00</span>
+                </span>
+              </a>
             </div>
             <div class="coupon-use">
               <span>Use Coupon:</span>
