--- a/product-listing-list.html
+++ b/product-listing-list.html
@@ -28,7 +28,7 @@
               <a href="shop.html">Shop</a>
             </li>
             <li>
-              <a href="#">🔥 Unique Functions<i class="fa fa-chevron-down"></i></a>
+              <a href="#"><i class="fa fa-diamond"></i> Unique Functions<i class="fa fa-angle-down"></i></a>
               <ul class="sub-menu">
                 <li><a href="#">Compare few items function</a></li>
                 <li><a href="#">Super function</a></li>
@@ -40,20 +40,21 @@
               </ul>
             </li>
             <li>
-              <a href="#">💰 Best conversations pages<i class="fa fa-chevron-down"></i></a>
+              <a href="#"><i class="fa fa-eye"></i> Best conversations pages<i class="fa fa-angle-down"></i></a>
               <ul class="sub-menu">
                 <li><a href="affiliate-search.html">Affiliate search</a></li>
-                <li><a href="#">Product Category</a></li>
+                <li><a href="product-category.html">Product Category</a></li>
                 <li><a href="product-details.html">Product Details</a></li>
                 <li><a href="product-details-2.html">Product Details - 2</a></li>
-                <li><a href="#">Product Listing</a></li>
+                <li><a href="product-listing-list.html">Product Listing</a></li>
                 <li><a href="top-multi.html">Top Multi</a></li>
                 <li><a href="versus-1.html">Versus 1</a></li>
                 <li><a href="versus-2.html">Versus 2</a></li>
+                <li><a href="products-compare.html">Compare Products</a></li>
               </ul>
             </li>
             <li>
-              <a href="wishlist.html">💗 My wishlist</a>
+              <a href="wishlist.html"><i class="fa fa-heart-o"></i> My wishlist</a>
             </li>
           </ul>
         </nav>
@@ -73,12 +74,14 @@
             <h3 class="item-name">
               <a href="product-details-2.html">Listing Product</a>
             </h3>
-            <ul>
-              <li>Integrated waterproof 4K camera with 2-axis</li>
-              <li>High performance product. Powered with Intel i7 core processor and GForce 100500(8Gb RAM) to make sure that this is very long description.</li>
-              <li>Regular size product.</li>
-              <li>With additional list item in the same row.</li>
-            </ul>
+            <a href="product-details-2.html" class="link-wrapper">
+              <ul>
+                <li>Integrated waterproof 4K camera with 2-axis</li>
+                <li>High performance product. Powered with Intel i7 core processor and GForce 100500(8Gb RAM) to make sure that this is very long description.</li>
+                <li>Regular size product.</li>
+                <li>With additional list item in the same row.</li>
+              </ul>
+            </a>
             <div class="wish-or-compare">
               <span class="wish-item">
                 <i class="fa fa-heart-o"></i>
@@ -88,7 +91,7 @@
               </span>
             </div>
           </div>
-          <div class="item-additional-info">
+          <a href="product-details-2.html" class="item-additional-info">
             <div class="text-center">
               <div class="info-val">3.2 GHz</div>
               <div class="info-titling">Max Speed</div>
@@ -97,7 +100,7 @@
               <div class="info-val">1920x1024</div>
               <div class="info-titling">Max Resolution</div>
             </div>
-          </div>
+          </a>
           <div class="item-price-action text-center">
             <div class="listing-prices">
               <span>$1,000.00</span>
@@ -115,10 +118,12 @@
             <h3 class="item-name">
               <a href="product-details-2.html">Listing Product 2</a>
             </h3>
-            <ul>
-              <li>Regular size product.</li>
-              <li>With additional list item in the same row.</li>
-            </ul>
+            <a href="product-details-2.html" class="link-wrapper">
+              <ul>
+                <li>Regular size product.</li>
+                <li>With additional list item in the same row.</li>
+              </ul>
+            </a>
             <div class="wish-or-compare">
               <span class="wish-item">
                 <i class="fa fa-heart-o"></i>
@@ -128,7 +133,7 @@
               </span>
             </div>
           </div>
-          <div class="item-additional-info">
+          <a href="product-details-2.html" class="item-additional-info">
             <div class="text-center">
               <div class="info-val">2.2 GHz</div>
               <div class="info-titling">Max Speed</div>
@@ -137,7 +142,7 @@
               <div class="info-val">-</div>
               <div class="info-titling">Max Resolution</div>
             </div>
-          </div>
+          </a>
           <div class="item-price-action text-center">
             <div class="listing-prices">
             </div>
@@ -154,11 +159,13 @@
             <h3 class="item-name">
               <a href="product-details-2.html">Listing Product 3</a>
             </h3>
-            <ul>
-              <li>Description item</li>
-              <li>Regular size product.</li>
-              <li>With additional list item in the same row.</li>
-            </ul>
+            <a href="product-details-2.html" class="link-wrapper">
+              <ul>
+                <li>Description item</li>
+                <li>Regular size product.</li>
+                <li>With additional list item in the same row.</li>
+              </ul>
+            </a>
             <div class="wish-or-compare">
               <span class="wish-item">
                 <i class="fa fa-heart-o"></i>
@@ -168,7 +175,7 @@
               </span>
             </div>
           </div>
-          <div class="item-additional-info">
+          <a href="product-details-2.html" class="item-additional-info">
             <div class="text-center">
               <div class="info-val">2.7 GHz</div>
               <div class="info-titling">Max Speed</div>
@@ -177,7 +184,7 @@
               <div class="info-val">1920x1024</div>
               <div class="info-titling">Max Resolution</div>
             </div>
-          </div>
+          </a>
           <div class="item-price-action text-center">
             <div class="listing-prices">
               <span class="prev-price">$870.50</span><span>$800.00</span>
@@ -195,14 +202,16 @@
             <h3 class="item-name">
               <a href="product-details-2.html">Top Product</a>
             </h3>
-            <ul>
-              <li>Description item</li>
-              <li>Description item 2</li>
-              <li>Description item 3</li>
-              <li>Description item 4</li>
-              <li>Regular size product.</li>
-              <li>With additional list item in the same row.</li>
-            </ul>
+            <a href="product-details-2.html" class="link-wrapper">
+              <ul>
+                <li>Description item</li>
+                <li>Description item 2</li>
+                <li>Description item 3</li>
+                <li>Description item 4</li>
+                <li>Regular size product.</li>
+                <li>With additional list item in the same row.</li>
+              </ul>
+            </a>
             <div class="wish-or-compare">
               <span class="wish-item">
                 <i class="fa fa-heart-o"></i>
@@ -212,7 +221,7 @@
               </span>
             </div>
           </div>
-          <div class="item-additional-info">
+          <a href="product-details-2.html" class="item-additional-info">
             <div class="text-center">
               <div class="info-val">3.7 GHz</div>
               <div class="info-titling">Max Speed</div>
@@ -221,7 +230,7 @@
               <div class="info-val">4k</div>
               <div class="info-titling">Max Resolution</div>
             </div>
-          </div>
+          </a>
           <div class="item-price-action text-center">
             <div class="listing-prices">
               <span class="prev-price">$1,570.50</span><span>$1.200.00</span>
@@ -239,9 +248,11 @@
             <h3 class="item-name">
               <a href="product-details-2.html">Product</a>
             </h3>
-            <ul>
-              <li>Description item</li>
-            </ul>
+            <a href="product-details-2.html" class="link-wrapper">
+              <ul>
+                <li>Description item</li>
+              </ul>
+            </a>
             <div class="wish-or-compare">
               <span class="wish-item">
                 <i class="fa fa-heart-o"></i>
@@ -251,7 +262,7 @@
               </span>
             </div>
           </div>
-          <div class="item-additional-info">
+          <a href="product-details-2.html" class="item-additional-info">
             <div class="text-center">
               <div class="info-val">1.7 GHz</div>
               <div class="info-titling">Max Speed</div>
@@ -260,7 +271,7 @@
               <div class="info-val">1024x600</div>
               <div class="info-titling">Max Resolution</div>
             </div>
-          </div>
+          </a>
           <div class="item-price-action text-center">
             <div class="listing-prices">
               <span>$550.00</span>
