UI adjustments by Philipp's comments.

--- a/versus-1.html
+++ b/versus-1.html
@@ -71,10 +71,10 @@
           </h6>
           <div class="short-description">Cool, Nice, Amazing</div>
           <div class="top-parameter">
-            <i class="fa fa-microchip"></i> 2.7GHz
+            2.7GHz
           </div>
           <div class="top-parameter">
-            <i class="fa fa-camera-retro"></i> 4k
+            4k
           </div>
         </div>
         <div class="item-25 center-item">
@@ -117,10 +117,10 @@
           </h6>
           <div class="short-description">Unbelievable product</div>
           <div class="top-parameter">
-            <i class="fa fa-microchip"></i> 2.2GHz
+            2.2GHz
           </div>
           <div class="top-parameter">
-            <i class="fa fa-camera-retro"></i> 4k
+            4k
           </div>
         </div>
       </div>
@@ -134,7 +134,7 @@
       <div class="comparing-holder">
         <div class="comparing-image">
           <figure><img src="./assets/images/versus-product-1.png" alt="Awesome Product"></figure>
-          <span class="choose-your">Choose offers</span>
+          <a href="#" class="choose-your">Choose offers</a>
         </div>
         <div class="products-compare-container">
           <div class="versus-row products-row">
@@ -245,7 +245,7 @@
         </div>
         <div class="comparing-image">
           <figure><img src="./assets/images/versus-product-2.png" alt="Cool Product"></figure>
-          <span class="choose-your">Choose offers</span>
+          <a href="#" class="choose-your">Choose offers</a>
         </div>
       </div>
     </div>
