UI+responsive adjustments by Philipp's comments.

--- a/versus-1.html
+++ b/versus-1.html
@@ -62,7 +62,7 @@
       </div>
     </div>
   </header>
-  <section class="top-text top-versus">
+  <section class="top-text top-versus first-versus">
     <div class="content-wrapper">
       <div class="top-versus-holder">
         <div class="item-25 left-side-item">
@@ -447,7 +447,12 @@
       <p>Check where you can buy products</p>
       <div class="vs-offers-container">
         <div class="vs-offer">
-          <figure><img src="./assets/images/top-product-image.jpg" alt="Another Product"></figure>
+          <a href="product-details.html">
+            <figure>
+              <figcaption>Awesome Product</figcaption>
+              <img src="./assets/images/top-product-image.jpg" alt="Another Product">
+            </figure>
+          </a>
           <div class="offers-list">
             <div class="top-offer-item">
               <a href="https://www.amazon.com" target="_blank" class="offer-store">
@@ -467,7 +472,12 @@
           </div>
         </div>
         <div class="vs-offer">
-          <figure><img src="./assets/images/top-product-image.jpg" alt="Another Product"></figure>
+          <a href="product-details.html">
+            <figure>
+              <figcaption>Cool Product</figcaption>
+              <img src="./assets/images/top-product-image.jpg" alt="Another Product">
+            </figure>
+          </a>
           <div class="set-top-alert">
             <span class="alert-price">
               <i class="fa fa-bell-o"></i>
