--- a/versus-2.html
+++ b/versus-2.html
@@ -11,8 +11,58 @@
   <link href="./css/responsive-styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<div class="page-container no-header">
-  <section class="top-text top-versus">
+<div class="page-container next-vs-page">
+  <header>
+    <div class="content-wrapper">
+      <div class="header-container">
+        <a href="/" class="logo">
+          <img src="./assets/images/logosmall.png" alt="Compare App">
+        </a>
+        <label class="mobile-menu" for="mobile-menu-trigger">
+          <i class="fa fa-bars"></i>
+        </label>
+        <input type="checkbox" id="mobile-menu-trigger" hidden>
+        <nav class="header-navigation">
+          <ul class="nav-container">
+            <li>
+              <a href="shop.html">Shop</a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-diamond"></i> Unique Functions<i class="fa fa-angle-down"></i></a>
+              <ul class="sub-menu">
+                <li><a href="#">Compare few items function</a></li>
+                <li><a href="#">Super function</a></li>
+                <li><a href="#">Extra function</a></li>
+                <li><a href="#">Amazing function</a></li>
+                <li><a href="#">Awesome function</a></li>
+                <li><a href="#">Ideal function</a></li>
+                <li><a href="#">Awesome Mega Super Unbelievable function!</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-eye"></i> Best conversations pages<i class="fa fa-angle-down"></i></a>
+              <ul class="sub-menu">
+                <li><a href="affiliate-search.html">Affiliate search</a></li>
+                <li><a href="product-category.html">Product Category</a></li>
+                <li><a href="product-details.html">Product Details</a></li>
+                <li><a href="product-details-2.html">Product Details - 2</a></li>
+                <li><a href="product-listing-list.html">Product Listing</a></li>
+                <li><a href="top-multi.html">Top Multi</a></li>
+                <li><a href="versus-1.html">Versus 1</a></li>
+                <li><a href="versus-2.html">Versus 2</a></li>
+                <li><a href="products-compare.html">Compare Products</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="wishlist.html"><i class="fa fa-heart-o"></i> My wishlist</a>
+            </li>
+          </ul>
+        </nav>
+        <label class="mobile-menu-overlay" for="mobile-menu-trigger"></label>
+      </div>
+    </div>
+  </header>
+  <section class="top-text top-versus second-versus">
     <div class="content-wrapper">
       <div class="top-versus-holder">
         <div class="item-33">
@@ -77,7 +127,7 @@
       <div class="comparing-holder">
         <div class="comparing-image">
           <figure><img src="./assets/images/versus-product-1.png" alt="Awesome Product"></figure>
-          <span class="choose-your">Choose offers</span>
+          <a href="#" class="choose-your">Choose offers</a>
         </div>
         <div class="products-compare-container">
           <div class="versus-row products-row">
@@ -188,7 +238,7 @@
         </div>
         <div class="comparing-image">
           <figure><img src="./assets/images/versus-product-2.png" alt="Cool Product"></figure>
-          <span class="choose-your">Choose offers</span>
+          <a href="#" class="choose-your">Choose offers</a>
         </div>
       </div>
     </div>
